--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<developer>
 			<id>stefanbrausch</id>
 			<name>Stefan Brausch</name>
-			<email>stefan.brausch@1und1.de</email>
+			<email>stefanbrausch@protonmail.ch</email>
 		</developer>
        	<developer>
 			<id>boev</id>
